fortallParser.py
# Generated from fortall.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class fortallParser ( Parser ):

    grammarFileName = "fortall.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "';'", "'retorna'", "'nada'", 
                     "'funcao'", "'principal'", "'('", "')'", "'='", "','", 
                     "'int'", "'bool'", "'{'", "'}'", "'se'", "'senao'", 
                     "'enquanto'", "'escreva'", "'leia'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NUMERO", "BOOLEAN", 
                      "STRING", "COMENTARIO", "WS" ]

    RULE_programa = 0
    RULE_funcaoPrincipal = 1
    RULE_declaracao = 2
    RULE_declaracaoVariavel = 3
    RULE_declaracaoFuncao = 4
    RULE_funcao = 5
    RULE_parametros = 6
    RULE_tipo = 7
    RULE_bloco = 8
    RULE_comando = 9
    RULE_atribuicao = 10
    RULE_comandoSe = 11
    RULE_comandoEnquanto = 12
    RULE_comandoEscreva = 13
    RULE_comandoLeia = 14
    RULE_comandoRetorna = 15
    RULE_listaExpressoes = 16
    RULE_expressao = 17
    RULE_expressaoOu = 18
    RULE_expressaoE = 19
    RULE_expressaoIgualdade = 20
    RULE_expressaoRelacional = 21
    RULE_expressaoAditiva = 22
    RULE_expressaoMultiplicativa = 23
    RULE_expressaoUnaria = 24
    RULE_expressaoPrimaria = 25
    RULE_chamadaFuncao = 26
    RULE_argumentos = 27

    ruleNames =  [ "programa", "funcaoPrincipal", "declaracao", "declaracaoVariavel", 
                   "declaracaoFuncao", "funcao", "parametros", "tipo", "bloco", 
                   "comando", "atribuicao", "comandoSe", "comandoEnquanto", 
                   "comandoEscreva", "comandoLeia", "comandoRetorna", "listaExpressoes", 
                   "expressao", "expressaoOu", "expressaoE", "expressaoIgualdade", 
                   "expressaoRelacional", "expressaoAditiva", "expressaoMultiplicativa", 
                   "expressaoUnaria", "expressaoPrimaria", "chamadaFuncao", 
                   "argumentos" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    ID=34
    NUMERO=35
    BOOLEAN=36
    STRING=37
    COMENTARIO=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fortallParser.ID, 0)

        def funcaoPrincipal(self):
            return self.getTypedRuleContext(fortallParser.FuncaoPrincipalContext,0)


        def EOF(self):
            return self.getToken(fortallParser.EOF, 0)

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fortallParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(fortallParser.DeclaracaoContext,i)


        def funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fortallParser.FuncaoContext)
            else:
                return self.getTypedRuleContext(fortallParser.FuncaoContext,i)


        def getRuleIndex(self):
            return fortallParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = fortallParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(fortallParser.T__0)
            self.state = 57
            self.match(fortallParser.ID)
            self.state = 58
            self.match(fortallParser.T__1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 59
                    self.declaracao() 
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 65
            self.funcaoPrincipal()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 66
                self.funcao()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(fortallParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoPrincipalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloco(self):
            return self.getTypedRuleContext(fortallParser.BlocoContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_funcaoPrincipal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncaoPrincipal" ):
                listener.enterFuncaoPrincipal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncaoPrincipal" ):
                listener.exitFuncaoPrincipal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncaoPrincipal" ):
                return visitor.visitFuncaoPrincipal(self)
            else:
                return visitor.visitChildren(self)




    def funcaoPrincipal(self):

        localctx = fortallParser.FuncaoPrincipalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcaoPrincipal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(fortallParser.T__2)
            self.state = 75
            self.match(fortallParser.T__3)
            self.state = 76
            self.match(fortallParser.T__4)
            self.state = 77
            self.match(fortallParser.T__5)
            self.state = 78
            self.match(fortallParser.T__6)
            self.state = 79
            self.match(fortallParser.T__7)
            self.state = 80
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoVariavel(self):
            return self.getTypedRuleContext(fortallParser.DeclaracaoVariavelContext,0)


        def declaracaoFuncao(self):
            return self.getTypedRuleContext(fortallParser.DeclaracaoFuncaoContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = fortallParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.declaracaoVariavel()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.declaracaoFuncao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoVariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(fortallParser.TipoContext,0)


        def ID(self):
            return self.getToken(fortallParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(fortallParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_declaracaoVariavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoVariavel" ):
                listener.enterDeclaracaoVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoVariavel" ):
                listener.exitDeclaracaoVariavel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoVariavel" ):
                return visitor.visitDeclaracaoVariavel(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoVariavel(self):

        localctx = fortallParser.DeclaracaoVariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracaoVariavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.tipo()
            self.state = 87
            self.match(fortallParser.ID)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 88
                self.match(fortallParser.T__8)
                self.state = 89
                self.expressao()


            self.state = 92
            self.match(fortallParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoFuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fortallParser.ID, 0)

        def bloco(self):
            return self.getTypedRuleContext(fortallParser.BlocoContext,0)


        def tipo(self):
            return self.getTypedRuleContext(fortallParser.TipoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(fortallParser.ParametrosContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_declaracaoFuncao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoFuncao" ):
                listener.enterDeclaracaoFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoFuncao" ):
                listener.exitDeclaracaoFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoFuncao" ):
                return visitor.visitDeclaracaoFuncao(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoFuncao(self):

        localctx = fortallParser.DeclaracaoFuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracaoFuncao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(fortallParser.T__2)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12]:
                self.state = 95
                self.tipo()
                pass
            elif token in [4]:
                self.state = 96
                self.match(fortallParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 99
            self.match(fortallParser.T__4)
            self.state = 100
            self.match(fortallParser.ID)
            self.state = 101
            self.match(fortallParser.T__6)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11 or _la==12:
                self.state = 102
                self.parametros()


            self.state = 105
            self.match(fortallParser.T__7)
            self.state = 106
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoFuncao(self):
            return self.getTypedRuleContext(fortallParser.DeclaracaoFuncaoContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncao" ):
                listener.enterFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncao" ):
                listener.exitFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncao" ):
                return visitor.visitFuncao(self)
            else:
                return visitor.visitChildren(self)




    def funcao(self):

        localctx = fortallParser.FuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.declaracaoFuncao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fortallParser.TipoContext)
            else:
                return self.getTypedRuleContext(fortallParser.TipoContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(fortallParser.ID)
            else:
                return self.getToken(fortallParser.ID, i)

        def getRuleIndex(self):
            return fortallParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = fortallParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.tipo()
            self.state = 111
            self.match(fortallParser.ID)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 112
                self.match(fortallParser.T__9)
                self.state = 113
                self.tipo()
                self.state = 114
                self.match(fortallParser.ID)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return fortallParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = fortallParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fortallParser.ComandoContext)
            else:
                return self.getTypedRuleContext(fortallParser.ComandoContext,i)


        def getRuleIndex(self):
            return fortallParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = fortallParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(fortallParser.T__12)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17180833800) != 0):
                self.state = 124
                self.comando()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(fortallParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoVariavel(self):
            return self.getTypedRuleContext(fortallParser.DeclaracaoVariavelContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(fortallParser.AtribuicaoContext,0)


        def chamadaFuncao(self):
            return self.getTypedRuleContext(fortallParser.ChamadaFuncaoContext,0)


        def comandoSe(self):
            return self.getTypedRuleContext(fortallParser.ComandoSeContext,0)


        def comandoEnquanto(self):
            return self.getTypedRuleContext(fortallParser.ComandoEnquantoContext,0)


        def comandoEscreva(self):
            return self.getTypedRuleContext(fortallParser.ComandoEscrevaContext,0)


        def comandoLeia(self):
            return self.getTypedRuleContext(fortallParser.ComandoLeiaContext,0)


        def comandoRetorna(self):
            return self.getTypedRuleContext(fortallParser.ComandoRetornaContext,0)


        def bloco(self):
            return self.getTypedRuleContext(fortallParser.BlocoContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = fortallParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comando)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.declaracaoVariavel()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.atribuicao()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.chamadaFuncao()
                self.state = 135
                self.match(fortallParser.T__1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.comandoSe()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.comandoEnquanto()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self.comandoEscreva()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 140
                self.comandoLeia()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 141
                self.comandoRetorna()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 142
                self.bloco()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fortallParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(fortallParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = fortallParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(fortallParser.ID)
            self.state = 146
            self.match(fortallParser.T__8)
            self.state = 147
            self.expressao()
            self.state = 148
            self.match(fortallParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoSeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(fortallParser.ExpressaoContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fortallParser.ComandoContext)
            else:
                return self.getTypedRuleContext(fortallParser.ComandoContext,i)


        def getRuleIndex(self):
            return fortallParser.RULE_comandoSe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoSe" ):
                listener.enterComandoSe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoSe" ):
                listener.exitComandoSe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoSe" ):
                return visitor.visitComandoSe(self)
            else:
                return visitor.visitChildren(self)




    def comandoSe(self):

        localctx = fortallParser.ComandoSeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comandoSe)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(fortallParser.T__14)
            self.state = 151
            self.match(fortallParser.T__6)
            self.state = 152
            self.expressao()
            self.state = 153
            self.match(fortallParser.T__7)
            self.state = 154
            self.comando()
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 155
                self.match(fortallParser.T__15)
                self.state = 156
                self.comando()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoEnquantoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(fortallParser.ExpressaoContext,0)


        def comando(self):
            return self.getTypedRuleContext(fortallParser.ComandoContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_comandoEnquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoEnquanto" ):
                listener.enterComandoEnquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoEnquanto" ):
                listener.exitComandoEnquanto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoEnquanto" ):
                return visitor.visitComandoEnquanto(self)
            else:
                return visitor.visitChildren(self)




    def comandoEnquanto(self):

        localctx = fortallParser.ComandoEnquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_comandoEnquanto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(fortallParser.T__16)
            self.state = 160
            self.match(fortallParser.T__6)
            self.state = 161
            self.expressao()
            self.state = 162
            self.match(fortallParser.T__7)
            self.state = 163
            self.comando()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoEscrevaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaExpressoes(self):
            return self.getTypedRuleContext(fortallParser.ListaExpressoesContext,0)


        def getRuleIndex(self):
            return fortallParser.RULE_comandoEscreva

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoEscreva" ):
                listener.enterComandoEscreva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoEscreva" ):
                listener.exitComandoEscreva(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoEscreva" ):
                return visitor.visitComandoEscreva(self)
            else:
                return visitor.visitChildren(self)




    def comandoEscreva(self):

        localctx = fortallParser.ComandoEscrevaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comandoEscreva)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(fortallParser.T__17)
            self.state = 166
            self.match(fortallParser.T__6)
            self.state = 167
            self.listaExpressoes()
            self.state = 168
            self.match(fortallParser.T__7)
            self.state = 169
            self.match(fortallParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoLeiaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fortallParser.ID, 0)

        def getRuleIndex(self):
            return fortallParser.RULE_comandoLeia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoLeia" ):
                listener.enterComandoLeia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoLeia" ):
                listener.exitComandoLeia(self)
